...

  return (
    <Sheet
      open={visible}
      onDismiss={onDismiss}
      title="Add training"
      confirmLabel="Add"
      onConfirm={handleCreate}
    >
      <View style={styles.body}>
        <FormGroup>
          <TitleAndDropdown
            title="Category"
            initialValue={form.category}
            dropdownOptions={categoryOptions}
            onChange={(value) =>
              setForm({
                ...form,
                category: value,
...
